feat: Jacoco 테스트 커버리지 설정
Branch(구문) 기준, 최소 90%

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,14 @@ jacocoTestReport {
 
 jacocoTestCoverageVerification {
     violationRules {
+        rule {
+            element = 'CLASS'
 
+            limit {
+                counter = 'BRANCH'
+                value = 'COVEREDRATIO'
+                minimum = 0.90
+            }
+        }
     }
 }
