refactor: Jacoco 테스트 커버리지 수정
Instruction(Java Byte Code)기준, 최소 90%
도메인 패키지에만 적용

--- a/build.gradle
+++ b/build.gradle
@@ -78,10 +78,12 @@ jacocoTestCoverageVerification {
             element = 'CLASS'
 
             limit {
-                counter = 'BRANCH'
+                counter = 'INSTRUCTION'
                 value = 'COVEREDRATIO'
                 minimum = 0.90
             }
+
+            includes = ['*.domain.*']
         }
     }
 }
