--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,10 @@ task buildFrontend(type: NpmTask, dependsOn: setUp) {
     args = ['run', 'build']
 }
 
-processResources.dependsOn 'buildFrontend'
+if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
+        || "$System.env.DEVBIE_ENVIRONMENT" == "develop") {
+    processResources.dependsOn 'buildFrontend'
+}
 
 configurations {
     compileOnly {
