feat: Github Oauth 로그인 구현 (#37)
* feat: Github Login 화면 띄우기

 OauthController를 통해 Github Login Url을 제공받는다.

* feat: AccessToken 받아오기

  GithubClient.java
 - github에서 제공해주는 access token을 요청하는 http request를 생성
 - Github OAuth ID와 Secret-ID, URL 정보를 가지고 있다.

* feat: access token으로 UserInfo 받아오기

* feat: User 정보 저장

User
 - Oauth서버의 식별자에 필요한 OauthId 추가

* feat: User정보로 Jwt토큰 생성

JwtTokenProvider
 - User의 Id를 통하여 토큰을 생성한다.

* feat: 프론트엔드, 백엔드 로그인 연동

router/index
 - login 경로 추가
LoginPage
 - 서버에 로그인 요청하여 토큰을 localStorage에 저장

* refactor: UserService, AuthService 의존성 정립

* feat: AuthInterceptor 구현

* feat: LoginUserArgumentResolver 구현

UserController
 - 테스트용 컨트롤러 구현
Interceptor
 - 경로변경 필요

* feat: 프론트엔드 로그인 연동

* fix: application.yml 정보 디폴트 값 설정

Co-authored-by: slowCoyle <slowcoyle@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ task buildFrontend(type: NpmTask, dependsOn: setUp) {
     args = ['run', 'build']
 }
 
-processResources.dependsOn 'buildFrontend'
+//processResources.dependsOn 'buildFrontend'
 
 configurations {
     compileOnly {
@@ -45,6 +45,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
