--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.moowork.node' version '1.3.1'
     id 'java'
     id 'jacoco'
+    id 'application'
 }
 
 group = 'underdogs'
@@ -31,6 +32,17 @@ task buildFrontend(type: NpmTask, dependsOn: setUp) {
 }
 
 //processResources.dependsOn 'buildFrontend'
+
+def environment = '';
+
+if ("$System.env.DEVBIE_ENVIRONMENT" == "product") {
+    environment = 'product'
+}
+if ("$System.env.DEVBIE_ENVIRONMENT" == "develop") {
+    environment = 'develop'
+}
+
+applicationDefaultJvmArgs = ["-Dspring.profiles.active=" + environment];
 
 configurations {
     compileOnly {
