--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,16 @@ jacocoTestReport {
 
 jacocoTestCoverageVerification {
     violationRules {
+        rule {
+            element = 'CLASS'
 
+            limit {
+                counter = 'INSTRUCTION'
+                value = 'COVEREDRATIO'
+                minimum = 0.80
+            }
+
+            includes = ['*.domain.*']
+        }
     }
 }
