feat: gradle.build 환경변수별 vue build 하도록 수정 (#36)

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,10 @@ task buildFrontend(type: NpmTask, dependsOn: setUp) {
     args = ['run', 'build']
 }
 
-//processResources.dependsOn 'buildFrontend'
+if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
+        || "$System.env.DEVBIE_ENVIRONMENT" == "develop") {
+    processResources.dependsOn 'buildFrontend'
+}
 
 def environment = '';
 
