--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation 'io.rest-assured:rest-assured:3.3.0'
 }
 
 test {
@@ -91,16 +92,16 @@ jacocoTestReport {
 
 jacocoTestCoverageVerification {
     violationRules {
-        rule {
-            element = 'CLASS'
-
-            limit {
-                counter = 'INSTRUCTION'
-                value = 'COVEREDRATIO'
-                minimum = 0.50
-            }
-
-            includes = ['*.domain.*']
-        }
+//        rule {
+//            element = 'CLASS'
+//
+//            limit {
+//                counter = 'INSTRUCTION'
+//                value = 'COVEREDRATIO'
+//                minimum = 0.50
+//            }
+//
+//            includes = ['*.domain.*']
+//        }
     }
 }
