--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
     "path": "^0.12.7",
     "router": "^1.3.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.3.4",
     "vuetify": "^2.3.4",
     "vuex": "^3.5.1"
   },
