feat: AcceptanceTest 정리
- build.gradle에 travis log 찍는 코드 추가
- user 생성 및 토큰 전역으로 사용
- 토큰생성을 위한 유효기간 늘림(300 -> 30000)

--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
     finalizedBy 'jacocoTestReport'
 }
 
