refactor: travis logging 설정 변경
- 실패할 때만 log 출력

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ dependencies {
 test {
     useJUnitPlatform()
     testLogging {
-        events "passed", "skipped", "failed"
+        events "failed"
         exceptionFormat "full"
     }
     finalizedBy 'jacocoTestReport'
