--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
-    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.3.2'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
