--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ if ("$System.env.DEVBIE_ENVIRONMENT" == "develop") {
 applicationDefaultJvmArgs = ["-Dspring.profiles.active=" + environment];
 
 configurations {
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -64,6 +67,12 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     compileOnly 'org.projectlombok:lombok'
+    compile 'org.springframework.boot:spring-boot-starter-log4j2'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.3'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
