--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ cache:
 script: "./gradlew clean build"
 
 after_success:
-  - docker build -t kimseonggyu1/devbie:latest
+  - docker build -t kimseonggyu1/devbie:latest .
