feat: docker와 profiles 서브모듈 적용
docker-compose와 각 컨테이너의 설정파일들 서브모듈로 관리
profiles를 local, develop, production으로 구분하고 서브모듈로 관리

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docker"]
 	path = docker
 	url = https://github.com/KimSeongGyu1/devbie_docker
+[submodule "src/main/resources/properties"]
+	path = src/main/resources/properties
+	url = https://github.com/KimSeongGyu1/devbie_properties
