--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,1 @@
-spring.h2.console.enabled=false
-
-spring.jpa.show-sql=true
-
-logging.config=classpath:log4j2.yml
-
-#dataSource
-spring.datasource.driver-class-name=${DRIVER_CLASS_NAME}
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER_NAME}
-spring.datasource.password=${DB_PASSWORD}
-
-#jwt
-security.jwt.token.secret-key=${JWT_SECRET_KEY}
-security.jwt.token.expire-length=3600000
-
-#Oauth
-oauth.client.github.client-id=${GITHUB_CLIENT_ID}
-oauth.client.github.client-secret=${GITHUB_CLIENT_SECRET}
-oauth.client.github.token-url=${GITHUB_TOKEN_URL}
-oauth.client.github.user-info-url=${GITHUB_USER_INFO_URL}
+spring.profiles.active=local
