--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.820')
+    implementation 'com.amazonaws:aws-java-sdk-s3'
     compileOnly 'org.projectlombok:lombok'
     compile 'org.springframework.boot:spring-boot-starter-log4j2'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.3'
