--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ git:
   submodules: false
 
 before_install:
+  - echo -e "machine github.com\n  login $GITHUB_TOKEN" > ~/.netrc
+  - git lfs pull
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
 
