feat: s3 properties 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.profiles.active=develop
+
+cloud.aws.s3.bucket=underdong-devbie-images
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.region.stack.auto=false
