--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,11 @@ spring:
       enabled: true
   jpa:
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   datasource:
     url: jdbc:h2:mem:testdb;IFEXISTS=FALSE;
-
 logging:
   config: classpath:log4j2.yml
+
