--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "marked": "^1.1.1",
+    "marked-images": "^2.0.1",
     "path": "^0.12.7",
     "router": "^1.3.5",
     "vue": "^2.6.11",
