--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.820')
