--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,10 +15,12 @@
     "marked-images": "^2.0.1",
     "path": "^0.12.7",
     "router": "^1.3.5",
+    "sockjs-client": "^1.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vuetify": "^2.3.4",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
