feat: 구글 애널리틱스 적용

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,6 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-script: "./gradlew clean build"
+script:
+  - "export NODE_ENV=production"
+  - "./gradlew clean build"
