feat: AWS S3 설정 추가 (#219)
* feat: AWS S3 설정 추가

* fix: 오타 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,11 @@ spring:
     url: jdbc:h2:mem:testdb;IFEXISTS=FALSE;
 logging:
   config: classpath:log4j2.yml
-
+cloud:
+  aws:
+    s3:
+      bucket: underdong-devbie-images
+    region:
+      static: ap-northeast-2
+      stack:
+        auto: false
