--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,6 +18,7 @@
     "sockjs-client": "^1.5.0",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
     "vuetify": "^2.3.4",
     "vuex": "^3.5.1",
