--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,6 +14,7 @@
     "marked": "^1.1.1",
     "marked-images": "^2.0.1",
     "path": "^0.12.7",
+    "reset-css": "^5.0.1",
     "router": "^1.3.5",
     "sockjs-client": "^1.5.0",
     "vue": "^2.6.11",
