--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,7 @@ after_success:
   - docker build -t kimseonggyu1/devbie:latest .
   - docker login -u $DOCKER_USER -p $PASSWORD
   - docker push kimseonggyu1/devbie:latest
+  - cd docker
+  - git add .
+  - git commit -m "updated in travis"
+  - git push https://'$GITHUB_INFO'@github.com/KimSeongGyu1/devbie_docker
