--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,14 @@ cache:
 
 script: "./gradlew clean build"
 
-
 after_success:
-  - docker build -t kimseonggyu1/devbie:latest .
-  - docker login -u $DOCKER_USER -p $PASSWORD
-  - docker push kimseonggyu1/devbie:latest
+#  - docker build -t kimseonggyu1/devbie:latest .
+#  - docker login -u $DOCKER_USER -p $PASSWORD
+#  - docker push kimseonggyu1/devbie:latest
   - cd docker
+  - ls -a
+  - git branch
+  - git status
   - git add .
   - git commit -m "updated in travis"
   - git push https://'$GITHUB_INFO'@github.com/KimSeongGyu1/devbie_docker
