--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ git:
 before_install:
     - sed -i 's/github.com/'$GITHUB_INFO'@github.com/' .gitmodules
     - git submodule update --init --recursive
+    - cd docker
+    - git checkout master
+    - cd ..
 
 cache:
   directories:
@@ -33,10 +36,8 @@ after_success:
 #  - docker login -u $DOCKER_USER -p $PASSWORD
 #  - docker push kimseonggyu1/devbie:latest
   - cd docker
-  - ls -a
   - git branch
-  - git checkout master
   - git status
   - git add .
   - git commit -m "updated in travis"
-  - git push https://'$GITHUB_INFO'@github.com/KimSeongGyu1/devbie_docker
+  - git push https://$GITHUB_INFO@github.com/KimSeongGyu1/devbie_docker
