test: travis내 git push 테스트6

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,8 @@ task buildFrontend(type: NpmTask, dependsOn: setUp) {
 }
 
 if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
-        || "$System.env.DEVBIE_ENVIRONMENT" == "develop") {
+        || "$System.env.DEVBIE_ENVIRONMENT" == "develop"
+        || "$System.env.DEVBIE_ENVIRONMENT" == "feature/116-docker") {
     processResources.dependsOn 'buildFrontend'
 }
 
