test: travis내 git push 테스트7

--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,9 @@ task buildFrontend(type: NpmTask, dependsOn: setUp) {
     args = ['run', 'build']
 }
 
-if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
-        || "$System.env.DEVBIE_ENVIRONMENT" == "develop"
-        || "$System.env.DEVBIE_ENVIRONMENT" == "feature/116-docker") {
+//if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
+//        || "$System.env.DEVBIE_ENVIRONMENT" == "develop") {
+if (true) {
     processResources.dependsOn 'buildFrontend'
 }
 
