--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        default_batch_fetch_size: 100
   datasource:
     url: jdbc:h2:mem:testdb;IFEXISTS=FALSE;
 logging:
