--- a/.travis.yml
+++ b/.travis.yml
@@ -43,5 +43,8 @@ after_success:
   - docker login -u $DOCKER_USER -p $PASSWORD
   - docker push kimseonggyu1/devbie:latest
 
+after_script:
+  - cat /home/travis/.npm/_logs/*
+
 after_failure:
   - cat /home/travis/.npm/_logs/*
