Feat: 도커를 활용한 환경 세팅 (#145)
* feat: travis에서 docker build 확인

* feat: travis 확인 브랜치 추가

현재 브랜치도 travis에서 확인하도록 수정

* fix: build문 오타 수정

* feat: travis에서 dockerHub로 push구현

* fix: travis login문 수정

* feat: mysql과 연결

* feat: properties 정보 환경변수로 저장

travis에도 암호화해서 업로드

* feat: docker를 위한 submodule 도입

* feat: docker와 profiles 서브모듈 적용

docker-compose와 각 컨테이너의 설정파일들 서브모듈로 관리
profiles를 local, develop, production으로 구분하고 서브모듈로 관리

* feat: nginx에서 정적파일 관리하도록 분리

* chore: develop 서버에서 돌아가도록 profile 변경

* feat: docker, properties 파일 develop서버에 맞추어 수정

* fix: gradlew에 실행 권한 사라졌던 것 복구

* feat: travis submodule 설정 변경

* feat: travis githubtoken 정보 추가

* feat: travis submodule 관련 권한 수정

* feat: https 적용

* feat: travis static file push 로직 추가

* test: 배포 테스트

* test: develop server sql 테스트

* fix: mysql 오류 수정

* feat: s3 properties 추가

* test: travis이용한 CD 테스트

* chore: 불필요한 travis 검사 브랜치 삭제

* chore: 불필요한 properties 삭제

--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,9 @@ task buildFrontend(type: NpmTask, dependsOn: setUp) {
     args = ['run', 'build']
 }
 
-if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
-        || "$System.env.DEVBIE_ENVIRONMENT" == "develop") {
+//if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
+//        || "$System.env.DEVBIE_ENVIRONMENT" == "develop") {
+if (true) {
     processResources.dependsOn 'buildFrontend'
 }
 
