--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,10 +14,12 @@
     "marked": "^1.1.1",
     "marked-images": "^2.0.1",
     "path": "^0.12.7",
+    "reset-css": "^5.0.1",
     "router": "^1.3.5",
     "sockjs-client": "^1.5.0",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
     "vuetify": "^2.3.4",
     "vuex": "^3.5.1",
