refactor: 질문 도메인 커스텀 SQL, Querydsl로 수정 (#241)
* refactor: 질문 추천, 비추천 count 속성으로 개선

* refactor: 답변 추천, 비추천 count 속성으로 개선

* refactor: 답변 커스텀 sql querydsl로 변경

* feat: hibernate.default_batch_fetch_size 설정

* test: 추천/비추천 count 테스트 추가

* refactor: recommendation querydsl 적용

* refactor: 상속 순서 변경

* test: Imple 테스트 추가

* test: 상속 순서 변경

* merge with develop

* refactor: yml파일에 중복되는 부분 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,14 @@
+spring:
+  h2:
+    console:
+      enabled: true
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
+
 cloud:
   aws:
     s3:
