[Fix] CI과정에서 Pull Request는 배포하지 않도록 설정 (#258)

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,14 +31,13 @@ cache:
 script: "./gradlew clean build"
 
 after_success:
-  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-    cd docker;
-    git add .;
-    git commit -m "updated in travis";
-    git push https://$GITHUB_INFO@github.com/KimSeongGyu1/devbie_docker;
-    cd ..;
-
-    docker build -t kimseonggyu1/devbie:latest .;
-    docker login -u $DOCKER_USER -p $PASSWORD;
-    docker push kimseonggyu1/devbie:latest;
-  fi
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ];
+    then cd docker;
+    then git add .;
+    then git commit -m "updated in travis";
+    then git push https://$GITHUB_INFO@github.com/KimSeongGyu1/devbie_docker;
+    then cd ..;
+    then docker build -t kimseonggyu1/devbie:latest .;
+    then docker login -u $DOCKER_USER -p $PASSWORD;
+    then docker push kimseonggyu1/devbie:latest;
+    fi
