--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ git:
   submodules: false
 
 before_install:
-    - if [ $TRAVIS_PULL_REQUEST == "false"]; then
-      echo "test"
+    - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+      echo "test";
       fi
     - echo "aaa"
     - echo "$TRAVIS_PULL_REQUEST"
