--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ git:
   submodules: false
 
 before_install:
-    - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    - if [ "$TRAVIS_PULL_REQUEST" == "true" ]; then
       echo "test";
       fi
     - echo "aaa"
