--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
 rootProject.name = 'devbie'
+include 'devbie-common'
+include 'devbie-core'
+include 'devbie-s3-client'
+include 'devbie-app-chat'
+include 'devbie-app-api'
+
