--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ buildscript {
 plugins {
     id 'org.springframework.boot' version '2.3.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'com.moowork.node' version '1.3.1'
     id 'java'
     id 'jacoco'
     id 'application'
@@ -22,43 +21,6 @@ plugins {
 group = 'underdogs'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
-node {
-    version = '12.16.2'
-    npmVersion = '6.14.4'
-    workDir = file('./src/frontend')
-    npmWorkDir = file('./src/frontend')
-    nodeModulesDir = file('./src/frontend')
-}
-
-task setUp(type: NpmTask) {
-    description = 'Install Node.js packages'
-    args = ['install']
-    inputs.files file('package.json')
-    outputs.files file('node_modules')
-}
-
-task buildFrontend(type: NpmTask, dependsOn: setUp) {
-    description = 'Build vue.js'
-    args = ['run', 'build']
-}
-
-//if ("$System.env.DEVBIE_ENVIRONMENT" == "product"
-//        || "$System.env.DEVBIE_ENVIRONMENT" == "develop") {
-if (true) {
-    processResources.dependsOn 'buildFrontend'
-}
-
-def environment = '';
-
-if ("$System.env.DEVBIE_ENVIRONMENT" == "product") {
-    environment = 'product'
-}
-if ("$System.env.DEVBIE_ENVIRONMENT" == "develop") {
-    environment = 'develop'
-}
-
-applicationDefaultJvmArgs = ["-Dspring.profiles.active=" + environment];
 
 configurations {
     all {
@@ -71,6 +33,24 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+subprojects {
+    group '2020-devbie'
+    version '1.0'
+
+    apply plugin: 'java'
+    apply plugin: 'io.spring.dependency-management'
+
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
 }
 
 dependencies {
