refactor: 공통 프로젝트 예외 분리
 - common은 공통되게 사용될 Util, DTO를 위한 모듈이다.

--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,12 @@ subprojects {
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
+
 }
 
 dependencies {
+    implementation project(':devbie-common')
+
     compile("com.querydsl:querydsl-jpa") // querydsl
     compile("com.querydsl:querydsl-apt") // querydsl
 
