--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,6 @@ include 'devbie-s3-client'
 include 'devbie-app-chat'
 include 'devbie-app-api'
 include 'devbie-frontend'
+include 'devbie-core-web'
+include 'devbie-auth'
+
