--- a/devbie-app-chat/build.gradle
+++ b/devbie-app-chat/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':devbie-core')
+    implementation project(':devbie-core-web')
     implementation project(':devbie-common')
     implementation project(':devbie-s3-client')
 
