--- a/devbie-core-web/build.gradle
+++ b/devbie-core-web/build.gradle
@@ -8,4 +8,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile 'org.springframework.boot:spring-boot-starter-web'
+
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
 }
