--- a/devbie-app-api/build.gradle
+++ b/devbie-app-api/build.gradle
@@ -1,7 +1,15 @@
-
 dependencies {
     implementation project(':devbie-common')
     implementation project(':devbie-core')
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+    // todo 고민되는 것
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // pageable을 서비스내로 이동시키면 될 듯하다.
 }
