--- a/devbie-app-api/build.gradle
+++ b/devbie-app-api/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':devbie-common')
     implementation project(':devbie-core')
+    implementation project(':devbie-core-web')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
