feat: 정적 코드 분석 툴 SonarQube 적용 (#334)
* feat: SonarQube 설정

* fix: npm 에러

* fix: 프로필 환경 develop으로 변경

* fix: travis syntax - indent

* feat: 로컬에서도 정적분석할 수 있도록 설정 변경

* refactor: 소나큐브 토큰 서브모듈 저장소에 저장 후 사용

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ cache:
 script: "./gradlew clean build"
 
 after_success:
+  - ./gradlew sonarqube -Dsonar.projectKey=devbie-sonarqube -Dsonar.host.url=http://3.34.66.245:8000 -Dsonar.login=$SONAR_TOKEN
   - if [ $TRAVIS_PULL_REQUEST == "false" ]; then
     cd docker;
     git add .;
