refactor: core 모듈 테스트코드 이동

--- a/build.gradle
+++ b/build.gradle
@@ -80,56 +80,54 @@ subprojects {
             extendsFrom annotationProcessor
         }
     }
-
-    test {
-        useJUnitPlatform()
-        testLogging {
-            events "failed"
-            exceptionFormat "full"
-        }
-        finalizedBy 'jacocoTestReport'
-    }
-
-    jacoco {
-        toolVersion = "0.8.5"
-    }
-
-    jacocoTestReport {
-        reports {
-            html.enabled true
-        }
-        finalizedBy 'jacocoTestCoverageVerification'
-    }
-
-    jacocoTestCoverageVerification {
-        def Qdomains = []
-        for (qPattern in "*.QA".."*.QZ") {  // qPattern = "*.QA","*.QB","*.QC", ... "*.QZ"
-            Qdomains.add(qPattern + "*")
-        }
-
-        violationRules {
-            rule {
-                element = 'CLASS'
-
-                limit {
-                    counter = 'INSTRUCTION'
-                    value = 'COVEREDRATIO'
-                    minimum = 0.80
-                }
-
-                includes = ['*.domain.*']
-                excludes = [] + Qdomains
-            }
-        }
-    }
+//
+//    test {
+//        useJUnitPlatform()
+//        testLogging {
+//            events "failed"
+//            exceptionFormat "full"
+//        }
+//        finalizedBy 'jacocoTestReport'
+//    }
+//
+//    jacoco {
+//        toolVersion = "0.8.5"
+//    }
+//
+//    jacocoTestReport {
+//        reports {
+//            html.enabled true
+//        }
+//        finalizedBy 'jacocoTestCoverageVerification'
+//    }
+//
+//    jacocoTestCoverageVerification {
+//        def Qdomains = []
+//        for (qPattern in "*.QA".."*.QZ") {  // qPattern = "*.QA","*.QB","*.QC", ... "*.QZ"
+//            Qdomains.add(qPattern + "*")
+//        }
+//
+//        violationRules {
+//            rule {
+//                element = 'CLASS'
+//
+//                limit {
+//                    counter = 'INSTRUCTION'
+//                    value = 'COVEREDRATIO'
+//                    minimum = 0.80
+//                }
+//
+//                includes = ['*.domain.*']
+//                excludes = [] + Qdomains
+//            }
+//        }
+//    }
 }
 
 dependencies {
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.3'
     compile 'mysql:mysql-connector-java'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-
 }
 
 
