--- a/devbie-app-api/build.gradle
+++ b/devbie-app-api/build.gradle
@@ -21,4 +21,5 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // pageable을 서비스내로 이동시키면 될 듯하다.
+    compile 'mysql:mysql-connector-java'
 }
