--- a/build.gradle
+++ b/build.gradle
@@ -15,55 +15,9 @@ buildscript {
         classpath("gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:${querydslPluginVersion}")
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
+        classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
     }
-}
-
-plugins {
-    id 'org.springframework.boot' version '2.3.1.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'com.moowork.node' version '1.3.1'
-    id 'java'
-    id 'jacoco'
-    id 'application'
-    id "org.sonarqube" version "2.7"
-}
-
-sonarqube {
-    properties {
-        property "sonar.host.url", "http://3.34.66.245:8000"
-        property "sonar.login", "${sonarToken}"
-        property "sonar.sources", "src"
-        property "sonar.language", "java"
-        property "sonar.projectVersion", "1.0"
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.profile", "Sonar way"
-        property "sonar.test.inclusions", "**/*Test.java"
-        property "sonar.exclusions", "**/src/frontend/**/*"
-    }
-}
-
-node {
-    version = '12.16.2'
-    npmVersion = '6.14.4'
-    workDir = file('./src/frontend')
-    npmWorkDir = file('./src/frontend')
-    nodeModulesDir = file('./src/frontend')
-}
-
-task setUp(type: NpmTask) {
-    description = 'Install Node.js packages'
-    args = ['install']
-    inputs.files file('package.json')
-    outputs.files file('node_modules')
-}
-
-task buildFrontend(type: NpmTask, dependsOn: setUp) {
-    description = 'Build vue.js'
-    args = ['run', 'build']
-}
-
-repositories {
-    mavenCentral()
 }
 
 subprojects {
@@ -75,7 +29,8 @@ subprojects {
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'jacoco'
     apply plugin: 'application'
-//    mainClassName = 'underdogs.devbie.DevbieApplication'
+    apply plugin: 'com.moowork.node'
+    apply plugin: 'org.sonarqube'
 
     sourceCompatibility = 1.8
 
@@ -110,6 +65,40 @@ subprojects {
             exceptionFormat "full"
         }
         finalizedBy 'jacocoTestReport'
+    }
+
+    sonarqube {
+        properties {
+            property "sonar.host.url", "http://3.34.66.245:8000"
+            property "sonar.login", "${sonarToken}"
+            property "sonar.sources", "src"
+            property "sonar.language", "java"
+            property "sonar.projectVersion", "1.0"
+            property "sonar.sourceEncoding", "UTF-8"
+            property "sonar.profile", "Sonar way"
+            property "sonar.test.inclusions", "**/*Test.java"
+            property "sonar.exclusions", "**/src/frontend/**/*"
+        }
+    }
+
+    node {
+        version = '12.16.2'
+        npmVersion = '6.14.4'
+        workDir = file('./src/frontend')
+        npmWorkDir = file('./src/frontend')
+        nodeModulesDir = file('./src/frontend')
+    }
+
+    task setUp(type: NpmTask) {
+        description = 'Install Node.js packages'
+        args = ['install']
+        inputs.files file('package.json')
+        outputs.files file('node_modules')
+    }
+
+    task buildFrontend(type: NpmTask, dependsOn: setUp) {
+        description = 'Build vue.js'
+        args = ['run', 'build']
     }
 
     jacoco {
@@ -173,9 +162,9 @@ project(':devbie-core') {
     }
 }
 
-dependencies {
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.3'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-}
+//dependencies {
+//    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.3'
+//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//}
 
 
